translations: update Chinese Simplified

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -2167,7 +2167,7 @@ msgstr "移除选中的版本或章节(&R)"
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:391
 #, no-c-format
 msgid "&Replace with normalized form"
-msgstr "替换为规范化形式(&R)"
+msgstr "转为规范化形式(&R)"
 
 #: src/mkvtoolnix-gui/header_editor/value_page.cpp:202
 #, no-c-format
@@ -2729,7 +2729,7 @@ msgstr "｢{0}｣ 缺少延迟数值。\n"
 #: src/merge/mkvmerge.cpp:2414
 #, no-c-format
 msgid "'{0}' lacks the file name.\n"
-msgstr " ｢{0}｣ 缺少附件文件名。\n"
+msgstr "｢{0}｣ 缺少文件名。\n"
 
 #: src/merge/mkvmerge.cpp:2603
 #: src/merge/mkvmerge.cpp:2610
@@ -2779,7 +2779,7 @@ msgstr "｢{0}｣ 轨道 {1}: {2}"
 #: src/common/mm_multi_file_io.cpp:176
 #, no-c-format
 msgid "'{0}': Processing the following files as well: {1}\n"
-msgstr " ｢{0}｣ : 还将处理以下文件: {1}\n"
+msgstr "｢{0}｣: 还将处理以下文件: {1}\n"
 
 #: src/input/r_matroska.cpp:1941
 #, no-c-format
@@ -3112,7 +3112,7 @@ msgstr "ALAC 私有数据大小不匹配\n"
 #: src/mkvtoolnix-gui/header_editor/value_page.cpp:165
 #, no-c-format
 msgid "ASCII string (no special chars like Umlaute etc.)"
-msgstr "ASCII 字符串 (不能使用中文、变音字母等特殊字符)"
+msgstr "ASCII 字符串 (不能使用汉字、变音字母等特殊字符)"
 
 #: src/output/p_av1.h:33
 #, no-c-format
@@ -3648,12 +3648,12 @@ msgstr "总是询问用户"
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:179
 #, no-c-format
 msgid "Always automatically replace with canonical form"
-msgstr "总是自动替换为最简式"
+msgstr "总是自动替换为最简式(&Z)"
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:182
 #, no-c-format
 msgid "Always automatically replace with extended language subtags form"
-msgstr "总是自动替换为扩展语言子标签形式"
+msgstr "总是自动替换为扩展语言子标签形式(&K)"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2189
 #, no-c-format
@@ -7609,7 +7609,7 @@ msgstr "间距:"
 #: src/common/xml/ebml_converter.cpp:292
 #, no-c-format
 msgid "Invalid 'format' attribute '{0}'."
-msgstr " ｢{0}｣ 是无效的 'format' 属性。"
+msgstr "无效的「格式」属性 ｢{0}｣。"
 
 #: src/common/base64.h:28
 #, no-c-format
@@ -7641,7 +7641,7 @@ msgstr "参数 ｢{0}｣ 中的附件 ID 或文件名无效。\n"
 #: src/common/xml/xml.h:51
 #, no-c-format
 msgid "Invalid attribute '{0}' in node '{1}' at position {2}"
-msgstr "位于 {2} 的节点｢{1}｣中存在无效的属性 ｢{0}｣ "
+msgstr "位于 {2} 的节点 ｢{1}｣ 中存在无效的属性 ｢{0}｣"
 
 #: src/merge/mkvmerge.cpp:1277
 #, no-c-format
@@ -8896,7 +8896,7 @@ msgstr "没有指定文件名。\n"
 #: src/merge/mkvmerge.cpp:1954
 #, no-c-format
 msgid "No file names were listed between '{0}' and '{1}'.\n"
-msgstr " ｢{0}｣ 与  ｢{1}｣ 之间未列出文件名。\n"
+msgstr " ｢{0}｣ 与 ｢{1}｣ 之间未列出文件名。\n"
 
 #: src/common/xml/ebml_converter.cpp:243
 #, no-c-format
@@ -9028,7 +9028,7 @@ msgstr "常规优先级"
 #: src/propedit/propedit_cli_parser.cpp:272
 #, no-c-format
 msgid "Normalize all IETF BCP 47 language tags of changed elements to either their canonical form (mode 'canonical'), their extended language subtags form (mode 'extlang') or not at all (mode 'off')"
-msgstr "将所有发生变化的元素的 IETF BCP 47 语言标签规范化为其最简式 (｢canonical｣模式) 或其扩展语言子标签形式 (｢extlang｣模式) 或不作改动 (｢off｣模式)。"
+msgstr "将所有发生变化的元素的 IETF BCP 47 语言标签规范化为其最简式 (｢canonical｣ 模式) 或其扩展语言子标签形式 (｢extlang｣ 模式) 或不作改动 (｢off｣ 模式)。"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:313
 #, no-c-format
@@ -10323,12 +10323,12 @@ msgstr "用新文件替换附件，并推断其名称及 MIME 类型(&D)"
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:178
 #, no-c-format
 msgid "Replace with canonical form once"
-msgstr "仅此次替换为最简式"
+msgstr "仅本次替换为最简式(&J)"
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:181
 #, no-c-format
 msgid "Replace with extended language subtags form once"
-msgstr "仅此次替换为扩展语言子标签形式"
+msgstr "仅本次替换为扩展语言子标签形式(&E)"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:721
 #, no-c-format
@@ -11846,7 +11846,7 @@ msgstr "音频/视频可能发生不同步。"
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:487
 #, no-c-format
 msgid "The canonical form does use a suitable prefix."
-msgstr ""
+msgstr "但对应的最简式却有与之匹配的前缀。"
 
 #: src/propedit/propedit.cpp:169
 #, no-c-format
@@ -12110,9 +12110,9 @@ msgid "The extended language subtag '{}' must only be used with one of the follo
 msgstr "扩展语言子标签 ｢{}｣ 只能与这些前缀搭配使用: {}。"
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:490
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The extended language subtags form does use a suitable prefix."
-msgstr "扩展语言子标签「%1」已被弃用。"
+msgstr "但对应的扩展语言子标签形式却有与之匹配的前缀。"
 
 #: src/output/p_mpeg4_p2.cpp:360
 #, no-c-format
@@ -12832,37 +12832,37 @@ msgstr "属性值包含非 ASCII 字符，但 ｢{0}｣ 中的属性并非 Unico
 #: src/propedit/change.cpp:158
 #, no-c-format
 msgid "The property value is not a valid binary spec in '{0}'. {1}\n"
-msgstr " ｢{0}｣ 中的属性值不是有效的二进制数据。{1}\n"
+msgstr "｢{0}｣ 中的属性值不是有效的二进制数据。{1}\n"
 
 #: src/propedit/change.cpp:157
 #, no-c-format
 msgid "The property value is not a valid binary spec or it is not exactly {2} bits long in '{0}'. {1}\n"
-msgstr " ｢{0}｣ 中的属性值不是有效的二进制数据，或长度不是 {2} 位。{1}\n"
+msgstr "｢{0}｣ 中的属性值不是有效的二进制数据，或长度不是 {2} 位。{1}\n"
 
 #: src/propedit/change.cpp:141
 #, no-c-format
 msgid "The property value is not a valid boolean in '{0}'. {1}\n"
-msgstr " ｢{0}｣ 中的属性值不是有效的布尔值。{1}\n"
+msgstr "｢{0}｣ 中的属性值不是有效的布尔值。{1}\n"
 
 #: src/propedit/change.cpp:207
 #, no-c-format
 msgid "The property value is not a valid date & time string in '{0}'."
-msgstr " ｢{0}｣ 中的属性值不是有效的日期／时间字符串。"
+msgstr "｢{0}｣ 中的属性值不是有效的日期／时间字符串。"
 
 #: src/propedit/change.cpp:148
 #, no-c-format
 msgid "The property value is not a valid floating point number in '{0}'. {1}\n"
-msgstr " ｢{0}｣ 中的属性值不是有效的浮点数。{1}\n"
+msgstr "｢{0}｣ 中的属性值不是有效的浮点数。{1}\n"
 
 #: src/propedit/change.cpp:133
 #, no-c-format
 msgid "The property value is not a valid signed integer in '{0}'. {1}\n"
-msgstr " ｢{0}｣ 中的属性值不是有效的带符号整数。{1}\n"
+msgstr "｢{0}｣ 中的属性值不是有效的带符号整数。{1}\n"
 
 #: src/propedit/change.cpp:127
 #, no-c-format
 msgid "The property value is not a valid unsigned integer in '{0}'. {1}\n"
-msgstr " ｢{0}｣ 中的属性值不是有效的无符号整数。{1}\n"
+msgstr "｢{0}｣ 中的属性值不是有效的无符号整数。{1}\n"
 
 #: src/merge/output_control.cpp:1036
 #, no-c-format
@@ -12912,7 +12912,7 @@ msgstr "文字「%1」已被弃用。"
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:460
 #, no-c-format
 msgid "The script '%1' should not be used for the language '%2' as it is the script the overwhelming majority of documents for this language is written in."
-msgstr ""
+msgstr "文字「%1」不应与语言「%2」搭配使用，因为此文字是书写该语言时占主导地位的最常见文字。"
 
 #: src/extract/extract_cli_parser.cpp:91
 #, no-c-format
@@ -13262,7 +13262,7 @@ msgstr "变体「%1」已被弃用。"
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:483
 #, no-c-format
 msgid "The variant '%1' is used with prefixes that aren't suited for it. Suitable prefixes are: %2."
-msgstr ""
+msgstr "未使用与变体标签「%1」相匹配的前缀。匹配的前缀为: %2。"
 
 #: src/common/bcp47.cpp:460
 #, no-c-format
@@ -13272,7 +13272,7 @@ msgstr "变体「{}」重复出现。"
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:747
 #, no-c-format
 msgid "The version line reported by mkvmerge ('%1') could not be recognized."
-msgstr "mkvmerge 报告的版本字段 ('%1') 无法识别。"
+msgstr "无法识别 mkvmerge 报告的版本字段 (｢%1｣)。"
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:751
 #, no-c-format
@@ -13635,7 +13635,7 @@ msgstr "该参数为显示宽度，单位为像素。"
 #: src/propedit/change.cpp:340
 #, no-c-format
 msgid "This property is mandatory and cannot be deleted in '{0}'. {1}\n"
-msgstr " ｢{0}｣ 中的元素为必要元素，无法删除。{1}\n"
+msgstr "｢{0}｣ 中的属性为必要属性，无法删除。{1}\n"
 
 #: src/propedit/change.cpp:296
 #, no-c-format
@@ -14093,7 +14093,7 @@ msgstr "未知音频流类型 0x{0:04x}。流 ID {1} 将被忽略。\n"
 #: src/common/chapters/chapters.cpp:498
 #, no-c-format
 msgid "Unknown chapter file format in '{0}'. It does not contain a supported chapter format.\n"
-msgstr " ｢{0}｣ 的章节文件格式未知。它不含支持的章节格式。\n"
+msgstr "章节文件 ｢{0}｣ 的格式未知。它不含受支持的章节格式。\n"
 
 #: src/common/content_decoder.cpp:76
 #, no-c-format
@@ -15748,7 +15748,7 @@ msgstr "未选择语言"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:842
 #, no-c-format
 msgid "no normalization"
-msgstr "不作规范化"
+msgstr "不作规范化处理"
 
 #: src/common/kax_info.cpp:824
 #, no-c-format
