add translation to Chinese Simplified (Singapore) by Dian Li

--- a/AUTHORS
+++ b/AUTHORS
@@ -65,12 +65,13 @@ David Player <dave@ran.bz>
 David Rey <tactica_os4@mundo-r.com>
     * Spanish translation
 
-Dean Lee <xslidian@gmail.com>
-    * Chinese Simplified translation (programs and man pages)
-    * Chinese Traditional translation
-
 Denis Baron <denb10@free.fr>
     * French translation
+
+Dian Li <xslidian@gmail.com>
+    * Chinese Simplified (China) translation
+    * Chinese Simplified (Singapore) translation
+    * Chinese Traditional (Taiwan) translation
 
 Diego Pettenò <flameeyes@gentoo.org>
     * Support for liblzo2
