man page translations: update Bulgarian

--- a/doc/man/po4a/po/bg.po
+++ b/doc/man/po4a/po/bg.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
 "POT-Creation-Date: 2022-03-28 19:05+0200\n"
-"PO-Revision-Date: 2022-03-12 10:23+0000\n"
-"Last-Translator: Симеон Цветков <sicvetkov@uni-sofia.bg>\n"
+"PO-Revision-Date: 2016-02-03 20:53+0000\n"
+"Last-Translator: Симеон Цветков <sicvetkov@uni-sofia.bg>, 2019-2022\n"
 "Language-Team: Bulgarian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/bg/)\n"
 "Language: bg\n"
 "MIME-Version: 1.0\n"
@@ -1375,7 +1375,7 @@ msgstr "<option>-x</option>, <option>--hexdump</option>"
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvinfo.xml:134
 msgid "Show the first 16 bytes of each frame as a hex dump."
-msgstr ""
+msgstr "Покажи първите 16 байта на всеки кадър в шестнадесетичен вид."
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><term>
 #: doc/man/mkvinfo.xml:140
@@ -1385,7 +1385,7 @@ msgstr "<option>-X</option>, <option>--full-hexdump</option>"
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvinfo.xml:143
 msgid "Show all bytes of each frame as a hex dump."
-msgstr ""
+msgstr "Покажи всички байтове на всеки кадър в шестнадесетичен вид."
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><term>
 #: doc/man/mkvinfo.xml:149
@@ -1395,7 +1395,7 @@ msgstr "<option>-z</option>, <option>--size</option>"
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvinfo.xml:152
 msgid "Show the size of each element including its header."
-msgstr ""
+msgstr "Покажи размера на всеки елемент, включително заглавието му."
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvinfo.xml:181
@@ -3366,7 +3366,7 @@ msgstr ""
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:2015
 msgid "Specifies a yaw rotation to the projection."
-msgstr ""
+msgstr "Задава завъртане на отклонението към прожекцията."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:2021
@@ -3376,7 +3376,7 @@ msgstr ""
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:2024
 msgid "Specifies a pitch rotation to the projection."
-msgstr ""
+msgstr "Задава завъртане на стъпката към прожекцията."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:2030
@@ -3386,7 +3386,7 @@ msgstr ""
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:2033
 msgid "Specifies a roll rotation to the projection."
-msgstr ""
+msgstr "Задава завъртане на наклона към прожекцията."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:2039
