translations: update Bulgarian

--- a/po/bg.po
+++ b/po/bg.po
@@ -7497,9 +7497,9 @@ msgid "Information"
 msgstr "Информация"
 
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:388
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Information & Warnings:"
-msgstr "Информация"
+msgstr "Информация и предупреждения:"
 
 #: src/common/bitvalue.cpp:76
 #, no-c-format
@@ -11384,7 +11384,7 @@ msgstr "Поддържани типове файлове:\n"
 #: src/merge/mkvmerge.cpp:91
 #, no-c-format
 msgid "Suppress status output."
-msgstr ""
+msgstr "Заглушаване на изхода за състояние."
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:646
 #, no-c-format
