man page translations: update Korean

--- a/doc/man/po4a/po/ko.po
+++ b/doc/man/po4a/po/ko.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
 "POT-Creation-Date: 2022-03-28 19:05+0200\n"
-"PO-Revision-Date: 2018-02-07 02:17+0000\n"
-"Last-Translator: Potato <sheppaul@naver.com>\n"
+"PO-Revision-Date: 2016-02-03 20:53+0000\n"
+"Last-Translator: Potato <sheppaul@naver.com>, 2016-2018\n"
 "Language-Team: Korean (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/ko/)\n"
 "Language: ko\n"
 "MIME-Version: 1.0\n"
@@ -3448,7 +3448,7 @@ msgstr "<option>--ui-language</option> <parameter>코드</parameter>"
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:2015
 msgid "Specifies a yaw rotation to the projection."
-msgstr ""
+msgstr "투사에 대한 요(yaw) 회전을 지정합니다."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:2021
@@ -3460,7 +3460,7 @@ msgstr "<option>--ui-language</option> <parameter>코드</parameter>"
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:2024
 msgid "Specifies a pitch rotation to the projection."
-msgstr ""
+msgstr "투사에 대한 피치(pitch) 회전을 지정합니다."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:2030
@@ -3472,7 +3472,7 @@ msgstr "<option>--ui-language</option> <parameter>코드</parameter>"
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:2033
 msgid "Specifies a roll rotation to the projection."
-msgstr ""
+msgstr "투사에 대한 롤(roll) 회전을 지정합니다."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:2039
@@ -5521,10 +5521,8 @@ msgstr "<option>--raw</option>"
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvtoolnix-gui.xml:93
-#, fuzzy
-#| msgid "All following file names will be opened in the header editor."
 msgid "All following file names will be opened in the info tool."
-msgstr "다음의 모든 파일명을 헤더 편집기에서 열 것입니다."
+msgstr "다음의 모든 파일명을 정보 도구에서 엽니다."
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvtoolnix-gui.xml:94
@@ -5627,10 +5625,9 @@ msgstr ""
 
 #. type: Content of: <xsl:stylesheet><xsl:template><table><thead><tr><th>
 #: doc/stylesheets/docbook-to-html.xsl:128
-#, fuzzy, no-wrap
-#| msgid "Options:"
+#, no-wrap
 msgid "Option"
-msgstr "옵션:"
+msgstr "옵션"
 
 #. type: Content of: <xsl:stylesheet><xsl:template><xsl:choose><xsl:otherwise><a><xsl:text>
 #: doc/stylesheets/docbook-to-html.xsl:183
