translations: update Korean

--- a/po/ko.po
+++ b/po/ko.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: MKVToolNix\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-03-29 21:15+0200\n"
-"PO-Revision-Date: 2020-09-02 18:12+0000\n"
-"Last-Translator: Moritz Bunkus <moritz@bunkus.org>\n"
+"PO-Revision-Date: 2016-01-14 08:27+0000\n"
+"Last-Translator: Potato <sheppaul@naver.com>, 2016-2018\n"
 "Language-Team: Korean (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/ko/)\n"
 "Language: ko\n"
 "MIME-Version: 1.0\n"
@@ -6095,9 +6095,9 @@ msgid "Enable language codes from &ISO 639-3 && 639-5"
 msgstr ""
 
 #: src/mkvtoolnix-gui/header_editor/page_model.cpp:169
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Enabled"
-msgstr "사용(&E)"
+msgstr "활성화됨"
 
 #: src/mkvtoolnix-gui/merge/output.cpp:183
 #, no-c-format
@@ -12777,9 +12777,9 @@ msgid "The number of video pixels to remove on the left of the image."
 msgstr "이미지 왼쪽 부분에서 제거할 비디오 픽셀 수 입니다."
 
 #: src/common/property_element.cpp:161
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The number of video pixels to remove on the right of the image."
-msgstr "이미지 오른쪽 부분에서 제거될 비디오 픽셀 수 입니다."
+msgstr "이미지 오른쪽 부분에서 제거할 비디오 픽셀 수 입니다."
 
 #: src/common/property_element.cpp:160
 #, no-c-format
