man page translations: update Dutch

--- a/doc/man/po4a/po/nl.po
+++ b/doc/man/po4a/po/nl.po
@@ -5,8 +5,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Nederlands 4.0.0.\n"
 "POT-Creation-Date: 2022-03-28 19:05+0200\n"
-"PO-Revision-Date: 2019-09-10 21:56+0200\n"
-"Last-Translator: Theo Gommans <gommysan@home.nl>\n"
+"PO-Revision-Date: 2016-02-03 20:53+0000\n"
+"Last-Translator: Theo Gommans <theogommans@outlook.com>, 2019\n"
 "Language-Team: Dutch (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/nl/)\n"
 "Language: nl_NL\n"
 "MIME-Version: 1.0\n"
@@ -3575,7 +3575,7 @@ msgstr "<option>--compression</option> <parameter>TID:n</parameter>"
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:2015
 msgid "Specifies a yaw rotation to the projection."
-msgstr ""
+msgstr "Specificeert een gierrotatie (yaw) naar de projectie."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:2021
@@ -3587,7 +3587,7 @@ msgstr "<option>--timestamps</option> <parameter>TID:file-name</parameter>"
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:2024
 msgid "Specifies a pitch rotation to the projection."
-msgstr ""
+msgstr "Specificeert een pitchrotatie voor de projectie."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:2030
@@ -3599,7 +3599,7 @@ msgstr "<option>--compression</option> <parameter>TID:n</parameter>"
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:2033
 msgid "Specifies a roll rotation to the projection."
-msgstr ""
+msgstr "Specificeert een rolrotatie naar de projectie."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:2039
@@ -5815,7 +5815,7 @@ msgstr "<option>--link</option>"
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvtoolnix-gui.xml:93
 msgid "All following file names will be opened in the info tool."
-msgstr ""
+msgstr "Alle volgende bestandsnamen zullen worden geopend in de info gereedschap."
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvtoolnix-gui.xml:94
@@ -5832,7 +5832,7 @@ msgstr "<option>--no-chapters</option>"
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvtoolnix-gui.xml:101
 msgid "All following file names will be opened in the chapter editor."
-msgstr ""
+msgstr "Alle volgende bestandsnamen zullen worden geopend in de hoofdstuk bewerker."
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvtoolnix-gui.xml:102
@@ -5849,7 +5849,7 @@ msgstr "<option>--no-chapters</option>"
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvtoolnix-gui.xml:109
 msgid "All following file names will be opened in the header editor."
-msgstr ""
+msgstr "Alle volgende bestandsnamen zullen worden geopend in de kopstuk bewerker."
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvtoolnix-gui.xml:110
@@ -5922,10 +5922,9 @@ msgstr ""
 
 #. type: Content of: <xsl:stylesheet><xsl:template><table><thead><tr><th>
 #: doc/stylesheets/docbook-to-html.xsl:128
-#, fuzzy, no-wrap
-#| msgid "Options:"
+#, no-wrap
 msgid "Option"
-msgstr "Opties:"
+msgstr "Optie"
 
 #. type: Content of: <xsl:stylesheet><xsl:template><xsl:choose><xsl:otherwise><a><xsl:text>
 #: doc/stylesheets/docbook-to-html.xsl:183
