man page translations: update Polish

--- a/doc/man/po4a/po/pl.po
+++ b/doc/man/po4a/po/pl.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix 8.5.0\n"
 "POT-Creation-Date: 2022-03-28 19:05+0200\n"
-"PO-Revision-Date: 2016-01-30 13:32+0100\n"
-"Last-Translator: Daniel Kluz <sir.daniel.k@gmail.com>\n"
-"Language-Team: none\n"
+"PO-Revision-Date: 2016-02-03 20:53+0000\n"
+"Last-Translator: Automatically generated, 2015\n"
+"Language-Team: Polish (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/pl/)\n"
 "Language: pl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=4; plural=(n==1 ? 0 : (n%10>=2 && n%10<=4) && (n%100<12 || n%100>14) ? 1 : n!=1 && (n%10>=0 && n%10<=1) || (n%10>=5 && n%10<=9) || (n%100>=12 && n%100<=14) ? 2 : 3);\n"
 "X-Generator: Poedit 1.8.5\n"
 
 #. type: Content of the product entity
@@ -1434,7 +1434,7 @@ msgstr "<option>-x</option>, <option>--hexdump</option>"
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvinfo.xml:134
 msgid "Show the first 16 bytes of each frame as a hex dump."
-msgstr ""
+msgstr "Pokaż pierwsze 16 bajtów każdej klatki jako zrzut szesnastkowy."
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><term>
 #: doc/man/mkvinfo.xml:140
@@ -1454,7 +1454,7 @@ msgstr "<option>-z</option>, <option>--size</option>"
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvinfo.xml:152
 msgid "Show the size of each element including its header."
-msgstr ""
+msgstr "Pokaż rozmiar każdego elementu łacznie z jego nagłówkiem."
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvinfo.xml:181
@@ -1607,7 +1607,7 @@ msgstr "<option>-q</option>, <option>--quiet</option>"
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:92
 msgid "Suppress status output."
-msgstr ""
+msgstr "Wycisz komunikaty wyjścia."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:97
@@ -5406,7 +5406,7 @@ msgstr ""
 #. type: Content of: <refentry><refsect1><title>
 #: doc/man/mkvpropedit.xml:672
 msgid "Attachment selectors"
-msgstr ""
+msgstr "Selektory załączników"
 
 #. type: Content of: <refentry><refsect1><para>
 #: doc/man/mkvpropedit.xml:675
@@ -5665,10 +5665,8 @@ msgstr "<option>--link</option>"
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvtoolnix-gui.xml:93
-#, fuzzy
-#| msgid "All following file names will be opened in the header editor."
 msgid "All following file names will be opened in the info tool."
-msgstr "Wszystkie następujące nazwy plików zostaną otwarte w edytorze nagłówków."
+msgstr "Wszystkie następujące nazwy plików zostaną otwarte w narzędziu informacyjnym."
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvtoolnix-gui.xml:94
@@ -5771,10 +5769,9 @@ msgstr ""
 
 #. type: Content of: <xsl:stylesheet><xsl:template><table><thead><tr><th>
 #: doc/stylesheets/docbook-to-html.xsl:128
-#, fuzzy, no-wrap
-#| msgid "Options:"
+#, no-wrap
 msgid "Option"
-msgstr "Opcje:"
+msgstr "Opcja"
 
 #. type: Content of: <xsl:stylesheet><xsl:template><xsl:choose><xsl:otherwise><a><xsl:text>
 #: doc/stylesheets/docbook-to-html.xsl:183
