--- a/po/cs.po
+++ b/po/cs.po
@@ -6,8 +6,8 @@ msgstr ""
 "Project-Id-Version: cs\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-03-29 21:15+0200\n"
-"PO-Revision-Date: 2022-01-30 21:28+0100\n"
-"Last-Translator: Pavel Rehak <pavel-rehak@email.cz>\n"
+"PO-Revision-Date: 2016-01-14 08:27+0000\n"
+"Last-Translator: Pavel Rehak <pavel-rehak@email.cz>, 2019,2021-2022\n"
 "Language-Team: Czech (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/cs/)\n"
 "Language: cs\n"
 "MIME-Version: 1.0\n"
@@ -6145,9 +6145,9 @@ msgid "Enable language codes from &ISO 639-3 && 639-5"
 msgstr "Povolit jazykové kódy z &ISO 639-3 && 639-5"
 
 #: src/mkvtoolnix-gui/header_editor/page_model.cpp:169
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Enabled"
-msgstr "&Povoleno"
+msgstr "Povoleno"
 
 #: src/mkvtoolnix-gui/merge/output.cpp:183
 #, no-c-format
