--- a/po/eu.po
+++ b/po/eu.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: mkvtoonix-eu\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-03-29 21:15+0200\n"
-"PO-Revision-Date: 2020-04-07 16:55+0000\n"
-"Last-Translator: Xabier Aramendi <azpidatziak@gmail.com>\n"
+"PO-Revision-Date: 2016-01-14 08:27+0000\n"
+"Last-Translator: Xabier Aramendi <azpidatziak@gmail.com>, 2016-2018,2020\n"
 "Language-Team: Basque (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/eu/)\n"
 "Language: eu\n"
@@ -6133,9 +6133,9 @@ msgid "Enable language codes from &ISO 639-3 && 639-5"
 msgstr ""
 
 #: src/mkvtoolnix-gui/header_editor/page_model.cpp:169
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Enabled"
-msgstr "&Gaituta"
+msgstr "Gaituta"
 
 #: src/mkvtoolnix-gui/merge/output.cpp:183
 #, no-c-format
@@ -12843,11 +12843,9 @@ msgid "The number of video pixels to remove on the left of the image."
 msgstr "Irudiaren ezkerraldean kentzeko bideo pixel zenbatekoa."
 
 #: src/common/property_element.cpp:161
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The number of video pixels to remove on the right of the image."
-msgstr ""
-"Irudiaren eskuinaldean kentzeko\n"
-"bideo pixel zenbatekoa."
+msgstr "Irudiaren eskuinaldean kentzeko bideo pixel zenbatekoa."
 
 #: src/common/property_element.cpp:160
 #, no-c-format
