--- a/po/ja.po
+++ b/po/ja.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: ja\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-03-29 21:15+0200\n"
-"PO-Revision-Date: 2020-09-02 18:12+0000\n"
-"Last-Translator: Moritz Bunkus <moritz@bunkus.org>\n"
+"PO-Revision-Date: 2016-01-14 08:27+0000\n"
+"Last-Translator: NipponGo, 2020\n"
 "Language-Team: Japanese (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/ja/)\n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
@@ -3595,9 +3595,9 @@ msgid "All following file names will be opened in the header editor."
 msgstr "以降に続く全てのファイル名がヘッダエディタで開かれます。"
 
 #: src/mkvtoolnix-gui/gui_cli_parser.cpp:59
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "All following file names will be opened in the info tool."
-msgstr "以降に続く全てのファイル名がヘッダエディタで開かれます。"
+msgstr "以降に続く全てのファイル名が情報操作機で開かれます。"
 
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:692
 #, no-c-format
@@ -9204,7 +9204,7 @@ msgstr "このオプションによってビデオコンテンツが修正され
 #: src/mkvtoolnix-gui/header_editor/value_page.cpp:213
 #, no-c-format
 msgid "Note:"
-msgstr ""
+msgstr "注意:"
 
 #: src/extract/mkvextract.cpp:165
 #: src/propedit/options.cpp:37
@@ -12801,7 +12801,7 @@ msgid "The number of video pixels to remove on the left of the image."
 msgstr "イメージの左で除去するビデオピクセル数です。"
 
 #: src/common/property_element.cpp:161
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The number of video pixels to remove on the right of the image."
 msgstr "イメージの右で除去するビデオピクセル数です。"
 
