translations: update Romanian

--- a/po/ro.po
+++ b/po/ro.po
@@ -2008,9 +2008,9 @@ msgid "&Remove job from queue after completion:"
 msgstr ""
 
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:384
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "&Remove selected attachment"
-msgstr "Activ&ează elementul selectat"
+msgstr "&Elimină atașamentul selectat"
 
 #: src/mkvtoolnix-gui/chapter_editor/tab.cpp:234
 #, no-c-format
@@ -12633,11 +12633,9 @@ msgid "The number of video pixels to remove on the left of the image."
 msgstr "Numărul de pixeli video de eliminat din partea din stânga a imaginii."
 
 #: src/common/property_element.cpp:161
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The number of video pixels to remove on the right of the image."
-msgstr ""
-"Numărul de pixeli video de eliminat\n"
-"din partea din stânga a imaginii."
+msgstr "Numărul de pixeli video de eliminat din partea din dreapta a imaginii."
 
 #: src/common/property_element.cpp:160
 #, no-c-format
