translations: update Serbian Latin

--- a/po/sr_RS@latin.po
+++ b/po/sr_RS@latin.po
@@ -4,8 +4,8 @@ msgstr ""
 "Project-Id-Version: sr_RS@latin\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-03-29 21:15+0200\n"
-"PO-Revision-Date: 2021-01-21 15:28+0100\n"
-"Last-Translator: Moritz Bunkus <moritz@bunkus.org>\n"
+"PO-Revision-Date: 2016-01-14 08:27+0000\n"
+"Last-Translator: Yannick Vaucher <yannick.vaucher@camptocamp.com>, 2015\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/moritz-"
 "bunkus/mkvtoolnix/language/sr_RS@latin/)\n"
 "Language: sr_RS@latin\n"
@@ -3423,9 +3423,9 @@ msgid "Adding chapter files"
 msgstr "Dodavanje poglavlja"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2126
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Adding files"
-msgstr "Dodavanje tagova"
+msgstr "Додавање датотека"
 
 #: src/mkvtoolnix-gui/forms/merge/adding_appending_files_dialog.h:165
 #: src/mkvtoolnix-gui/forms/merge/adding_appending_files_dialog.h:166
@@ -6133,9 +6133,9 @@ msgid "Enable language codes from &ISO 639-3 && 639-5"
 msgstr ""
 
 #: src/mkvtoolnix-gui/header_editor/page_model.cpp:169
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Enabled"
-msgstr "&Uključeno"
+msgstr "Uključeno"
 
 #: src/mkvtoolnix-gui/merge/output.cpp:183
 #, no-c-format
@@ -7138,9 +7138,9 @@ msgid "ISO 639-2 code"
 msgstr "Kod ISO 639-2"
 
 #: src/common/iso639.cpp:43
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "ISO 639-3 code"
-msgstr "Kod ISO 639-1"
+msgstr "ИСО 639-3 код"
 
 #: src/common/file_types.cpp:42
 #: src/common/file_types.cpp:90
@@ -8183,14 +8183,14 @@ msgstr "Jezik:"
 
 #: src/mkvtoolnix-gui/chapter_editor/name_model.cpp:28
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:231
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Languages"
-msgstr "&Jezici"
+msgstr "Језици"
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/tab.h:537
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Languages:"
-msgstr "Jezik:"
+msgstr "Језици:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2091
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2134
@@ -9899,7 +9899,7 @@ msgstr "Lična upotreba"
 #: src/output/p_prores.h:26
 #, no-c-format
 msgid "ProRes video"
-msgstr ""
+msgstr "ProRes видео"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2123
 #, no-c-format
@@ -10808,9 +10808,9 @@ msgid "Select Matroska file to read segment UID from"
 msgstr "Izaberi Matroska fajl iz kog se čita segment UID"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:724
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Select a directory"
-msgstr "Izaberite izlazni direktorijum"
+msgstr "Одаберите директоријум"
 
 #: src/mkvtoolnix-gui/merge/input.cpp:1453
 #, no-c-format
