program translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: MKVToolNix Italian translation 17.12.2018\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-04-09 12:17+0200\n"
-"PO-Revision-Date: 2022-04-03 20:48+0200\n"
+"PO-Revision-Date: 2016-01-14 08:27+0000\n"
 "Last-Translator: ROBERTO BORIOTTI <roberto.boriotti@canon.it>, 2021-2022\n"
 "Language-Team: Italian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/it/)\n"
@@ -6088,9 +6088,9 @@ msgid "Either fix the error or remove the configuration before closing the prefe
 msgstr "Correggi l'errore o rimuovi la configurazione prima di chiudere la finestra delle impostazioni."
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:923
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Either the file format or the audio codec is not supported."
-msgstr "La divisione di tracce di questo tipo non è supportata."
+msgstr "Il formato del file o il codec audio non sono supportati."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:334
 #, no-c-format
@@ -6295,9 +6295,9 @@ msgid "Error parsing the tags in '{0}': some mandatory elements are missing.\n"
 msgstr "Errore nell'analisi dei tag in '{0}': alcuni elementi fondamentali sono mancanti.\n"
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:934
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Error playing audio"
-msgstr "Errore nel caricamento file impostazioni"
+msgstr "Errore nel riprodurre l'audio"
 
 #: src/mkvtoolnix-gui/info/tab.cpp:196
 #: src/mkvtoolnix-gui/util/kax_analyzer.cpp:80
@@ -8927,7 +8927,7 @@ msgstr "Nessun allegato corrisponde alle specifiche {0}.\n"
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:931
 #, no-c-format
 msgid "No audio device is available for playback, or accessing it failed."
-msgstr ""
+msgstr "Non è disponibile nessun dispositivo audio per la riproduzione o l'accesso non è riuscito."
 
 #: src/propedit/propedit.cpp:187
 #, no-c-format
@@ -11938,9 +11938,9 @@ msgid "The attachment ({0}) is too big ({1})."
 msgstr "L'allegato ({0}) è troppo grande ({1})."
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:920
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The audio file '%1' could not be played back."
-msgstr "Il file tag XML '{0}' non può essere letto.\n"
+msgstr "Il file audio \"%1 \" non può essere riprodotto."
 
 #: src/mkvtoolnix-gui/util/settings.cpp:296
 #, no-c-format
