program translations: update Russian

--- a/po/ru.po
+++ b/po/ru.po
@@ -5861,9 +5861,9 @@ msgid "Either fix the error or remove the configuration before closing the prefe
 msgstr "Исправьте ошибку или удалите конфигурацию перед закрытием диалога настроек."
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:923
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Either the file format or the audio codec is not supported."
-msgstr "Разбиение дорожек данного типа не поддерживается."
+msgstr "Формат файла или аудиокодек не поддерживаются."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:334
 #, no-c-format
@@ -6068,9 +6068,9 @@ msgid "Error parsing the tags in '{0}': some mandatory elements are missing.\n"
 msgstr "Ошибка при разборе тегов в \"{0}\": некоторые обязательные элементы отсутствуют.\n"
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:934
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Error playing audio"
-msgstr "Ошибка при загрузке файла настроек"
+msgstr "Ошибка воспроизведения аудио"
 
 #: src/mkvtoolnix-gui/info/tab.cpp:196
 #: src/mkvtoolnix-gui/util/kax_analyzer.cpp:80
@@ -8704,7 +8704,7 @@ msgstr "Нет вложений, подходящих под описание \"
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:931
 #, no-c-format
 msgid "No audio device is available for playback, or accessing it failed."
-msgstr ""
+msgstr "Аудиоустройство не доступно для воспроизведения, или доступ к нему не удался."
 
 #: src/propedit/propedit.cpp:187
 #, no-c-format
@@ -11738,9 +11738,9 @@ msgid "The attachment ({0}) is too big ({1})."
 msgstr "Вложение ({0}) слишком большое ({1})."
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:920
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The audio file '%1' could not be played back."
-msgstr "XML-файл тегов \"{0}\" не может быть прочитан.\n"
+msgstr "Не удалось воспроизвести аудиофайл «%1»."
 
 #: src/mkvtoolnix-gui/util/settings.cpp:296
 #, no-c-format
