program translations: update Chinese Simplified (Singapore)

--- a/po/zh_SG.po
+++ b/po/zh_SG.po
@@ -6001,9 +6001,9 @@ msgid "Either fix the error or remove the configuration before closing the prefe
 msgstr "关闭偏好设置对话框前，请先修正错误，或将配置移除。"
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:923
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Either the file format or the audio codec is not supported."
-msgstr "不支持切割此类型的轨道。"
+msgstr "不支持该文件格式或其音频编解码格式。"
 
 #: src/mkvtoolnix-gui/merge/output.cpp:334
 #, no-c-format
@@ -6210,7 +6210,7 @@ msgstr "解析「{0}」中的标签出错: 缺少一些必要元素。\n"
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:934
 #, no-c-format
 msgid "Error playing audio"
-msgstr ""
+msgstr "播放音频出错"
 
 #: src/mkvtoolnix-gui/info/tab.cpp:196
 #: src/mkvtoolnix-gui/util/kax_analyzer.cpp:80
@@ -8838,7 +8838,7 @@ msgstr "没有与「{0}」匹配的附件。\n"
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:931
 #, no-c-format
 msgid "No audio device is available for playback, or accessing it failed."
-msgstr ""
+msgstr "没有音频设备可用于播放，或设备无法访问。"
 
 #: src/propedit/propedit.cpp:187
 #, no-c-format
@@ -11833,9 +11833,9 @@ msgid "The attachment ({0}) is too big ({1})."
 msgstr "附件 ({0}) 太大 ({1})。"
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:920
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The audio file '%1' could not be played back."
-msgstr "XML 标签文件「{0}」无法读取。\n"
+msgstr "无法回放音频文件 ｢%1｣。"
 
 #: src/mkvtoolnix-gui/util/settings.cpp:296
 #, no-c-format
