program translations: update Chinese Traditional (Traiwan)

--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -6031,9 +6031,9 @@ msgid "Either fix the error or remove the configuration before closing the prefe
 msgstr "在關閉喜好設定對話方塊前修復錯誤或刪除配置。"
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:923
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Either the file format or the audio codec is not supported."
-msgstr "不支援分割此類型的軌道。"
+msgstr "不支持该文件格式或其音频编解码格式。"
 
 #: src/mkvtoolnix-gui/merge/output.cpp:334
 #, no-c-format
@@ -6238,9 +6238,9 @@ msgid "Error parsing the tags in '{0}': some mandatory elements are missing.\n"
 msgstr "解析 '{0}' 中的標籤發生錯誤: 缺少一些必須的元件。\n"
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:934
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Error playing audio"
-msgstr "載入設定檔發生錯誤"
+msgstr "播放音频出错"
 
 #: src/mkvtoolnix-gui/info/tab.cpp:196
 #: src/mkvtoolnix-gui/util/kax_analyzer.cpp:80
@@ -8868,7 +8868,7 @@ msgstr "沒有符合形式 '{0}' 的附件。\n"
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:931
 #, no-c-format
 msgid "No audio device is available for playback, or accessing it failed."
-msgstr ""
+msgstr "没有音频设备可用于播放，或设备无法访问。"
 
 #: src/propedit/propedit.cpp:187
 #, no-c-format
@@ -11863,9 +11863,9 @@ msgid "The attachment ({0}) is too big ({1})."
 msgstr "附件 ({0}) 太大 ({1})。"
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:920
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The audio file '%1' could not be played back."
-msgstr "此 XML 標籤檔案 '{0}' 無法讀取。\n"
+msgstr "无法回放音频文件 ｢%1｣。"
 
 #: src/mkvtoolnix-gui/util/settings.cpp:296
 #, no-c-format
